<resources>
    <string name="app_name">Test de Orientacion Vocacional</string>
    <string name="Instruccion1">1) Lee atentamente cada una de las actividades.</string>
    <string name="Instruccion2">2) Marca las acciones que te interesaria hacer.</string>
    <string name="Instruccion3"> En general no existen respuestas correctas o incorrectas; lo importante es que contestes con sinceridad y confianza para que puedas conocer mejor tus intereses vocacionales.</string>
    <string name="res_test">¡Ahora Estas Listo para Responder el Test!.</string>
    <string name="P1">Diseñar programas de computación y explorar nuevas aplicaciones tecnológicas para uso del internet.</string>
    <string name="P2">Criar, cuidar y tratar animales domésticos y de campo.</string>
    <string name="P3">Investigar sobre áreas verdes, medio ambiente y cambios climáticos.</string>
    <string name="P4">Ilustrar, dibujar y animar digitalmente.</string>
    <string name="P5">Seleccionar, capacitar y motivar al personal de una organización/empresa.</string>
    <string name="P6">Realizar excavaciones para descubrir restos del pasado.</string>
    <string name="P7">Resolver problemas de cálculo para construir un puente.</string>
    <string name="P8">Diseñar cursos para enseñar a la gente sobre temas de salud e higiene.</string>
    <string name="P9">Tocar un instrumento y componer música.</string>
    <string name="P10">Planificar cuáles son las metas de una organización pública o privada a mediano y largo plazo.</string>
    <string name="P11">Diseñar y planificar la producción masiva de artículos como muebles, autos, equipos de oficina, empaques y envases para alimentos y otros.</string>
    <string name="P12">Diseñar logotipos y portadas de una revista.</string>
    <string name="P13">Organizar eventos y atender a sus asistentes.</string>
    <string name="P14">Atender la salud de personas enfermas.</string>
    <string name="P15">Controlar ingresos y egresos de fondos y presentar el balance final de una institución.</string>
    <string name="P16">Hacer experimentos con plantas (frutas, árboles, flores)</string>
    <string name="P17">Concebir planos para viviendas, edificios y ciudadelas.</string>
    <string name="P18">Investigar y probar nuevos productos farmacéuticos.</string>
    <string name="P19">Hacer propuestas y formular estrategias para aprovechar las relaciones económicas entre dos países.</string>
    <string name="P20">Pintar, hacer esculturas, ilustrar libros de arte, etcétera.</string>
    <string name="P21">Elaborar campañas para introducir un nuevo producto al mercado.</string>
    <string name="P22">Examinar y tratar los problemas visuales</string>
    <string name="P23">Defender a clientes individuales o empresas en juicios de diferente naturaleza.</string>
    <string name="P24">Diseñar máquinas que puedan simular actividades humanas.</string>
    <string name="P25">Investigar las causas y efectos de los trastornos emocionales</string>
    <string name="P26">Supervisar las ventas de un centro comercial</string>
    <string name="P27">Atender y realizar ejercicios a personas que tienen limitaciones físicas, problemas de lenguaje, etcétera.</string>
    <string name="P28">Prepararse para ser modelo profesional.</string>
    <string name="P29">Aconsejar a las personas sobre planes de ahorro e inversiones.</string>
    <string name="P30">Elaborar mapas, planos e imágenes para el estudio y análisis de datos geográficos.</string>
    <string name="P31">Diseñar juegos interactivos electrónicos para computadora.</string>
    <string name="P32">Realizar el control de calidad de los alimentos</string>
    <string name="P33">Tener un negocio propio de tipo comercial.</string>
    <string name="P34">Escribir artículos periodísticos, cuentos, novelas y otros.</string>
    <string name="P35">Redactar guiones y libretos para un programa de televisión</string>
    <string name="P36">Organizar un plan de distribución y venta de un gran almacén.</string>
    <string name="P37">Estudiar la diversidad cultural en el ámbito rural y urbano</string>
    <string name="P38">Gestionar y evaluar convenios internacionales de cooperación para el desarrollo social.</string>
    <string name="P39">Crear campañas publicitarias</string>
    <string name="P40">Trabajar investigando la reproducción de peces, camarones y otros animales marinos.</string>
    <string name="P41">Dedicarse a fabricar productos alimenticios de consumo masivo.</string>
    <string name="P42">Gestionar y evaluar proyectos de desarrollo en una institución educativa y/o fundación.</string>
    <string name="P43">Rediseñar y decorar espacios físicos en viviendas, oficinas y locales comerciales.</string>
    <string name="P44">Administrar una empresa de turismo y/o agencias de viaje.</string>
    <string name="P45">Aplicar métodos alternativos a la medicina tradicional para atender personas con dolencias de diversa índole.</string>
    <string name="P46">Diseñar ropa para niños, jóvenes y adultos.</string>
    <string name="P48">Manejar y/o dar mantenimiento a dispositivos/aparatos tecnológicos en aviones, barcos, radares, etcétera.</string>
    <string name="P49">Estudiar idiomas extranjeros –actuales y antiguos- para hacer traducción.</string>
    <string name="P51">Revisar y dar mantenimiento a artefactos eléctricos, electrónicos y computadoras.</string>
    <string name="P52">Enseñar a niños de 0 a 5 años.</string>
    <string name="test_vocacional">Test Vocacional</string>
    <string name="c_test_basico">Comenzar Test Basico</string>
    <string name="f_titulo_basico">Test de Orientacion Vocacional Basico</string>
    <string-array name="names">
        <item>Español</item>
        <item>Quechua</item>

    </string-array>
    <string name="title_activity_menu">Test Vocacional</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Test Vocacional</string>
    <string name="nav_header_subtitle">App en desarrollo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuracion</string>
    <string name="hello_blank_fragment">Test de Orientacion vocacional Basico</string>
    <string name="inicio">Inicio</string>
    <string name="test_basico">Test Basico</string>
    <string name="test_completo">Test Completo</string>
    <string name="configuracion">Configuracion</string>
    <string name="communicate">Communicate</string>
    <string name="invitar_a_un_amigo">Invitar a un amigo</string>
    <string name="help">Ayuda</string>
    <string name="calificar">Calificar</string>
    <string name="tc_valor_0">No Conozco</string>
    <string name="tc_valor_1">Me desagrada</string>
    <string name="tc_valor_2">Siento indiferencia</string>
    <string name="tc_valor_3">Me agradaría</string>
    <string name="tc_1">Estudiar los seres vivos y realizar trabajos en campo como la botánica, la zoología o la genética</string>
    <string name="tc_2">Ser astrónomo</string>
    <string name="tc_3">Trabajar en centros de cultivo de especies acuáticas, vegetales o animales</string>
    <string name="tc_4">Ser geólogo</string>
    <string name="tc_5">Ser licenciado en ciencias del mar</string>
    <string name="tc_6">Estudiar los fenómenos del firmamento y aplicar estos conocimientos a la navegación o  a la    utilización del espacio</string>
    <string name="tc_7">Investigar las propiedades de la materia para los productos de medicina, agricultura y otras</string>
    <string name="tc_8">Ser químico</string>
    <string name="tc_9">Ser biólogo</string>
    <string name="tc_10">Estudiar la tierra y sus componentes</string>
    <string name="tc_11">Trabajar como ingeniero ambiental</string>
    <string name="tc_12">Dedicarse a la conservación de recursos naturales</string>
    <string name="tc_13">Asesorar y tratar a personas con problemas de alimentación</string>
    <string name="tc_14">Ser dietista</string>
    <string name="tc_15">Curar algunas enfermedades del aparato locomotor o del sistema nervioso mediante técnicas y medios naturales</string>
    <string name="tc_16">Desarrollar proyectos y trabajos de electrónica aplicados  a la industria</string>
    <string name="tc_17">Diseñar instalaciones relacionadas con las comunicaciones (telefonía, radio, etc.)</string>
    <string name="tc_18">Realizar proyectos para la construcción de puentes, carreteras y aeropuertos</string>
    <string name="tc_19">Ser ingeniero de telecomunicación</string>
    <string name="tc_20">Ser ingeniero de caminos</string>
    <string name="tc_21">Ser arquitecto.	</string>
    <string name="tc_22">Ser experto en edificación y construcción civil.	</string>
    <string name="tc_23">Realizar tareas relacionadas de seguridad del tráfico aéreo.	</string>
    <string name="tc_24">Ser ingeniero en electrónica.	</string>
    <string name="tc_25">Asesorar y tratar a personas con problemas de alimentación.	</string>
    <string name="tc_26">Ser dietista.	</string>
    <string name="tc_27">Curar algunas enfermedades del aparato locomotor o del sistema nervioso mediante técnicas y medios naturales.	</string>
    <string name="tc_28">Aplicar conocimientos científicos trabajando en laboratorios donde se preparan medicamentos.	</string>
    <string name="tc_29">Trabajar como fisioterapeuta.	</string>
    <string name="tc_30">Ser enfermero/a.	</string>
    <string name="tc_31">Ser farmacéutico.	</string>
    <string name="tc_32">Aplicar los conocimientos de la anatomía, las funciones y el comportamiento de las personas sanas para establecer el diagnóstico y el tratamiento.	</string>
    <string name="tc_33">Aplicar los conocimientos de medicina a tratamientos de enfermedades mentales.	</string>
    <string name="tc_34">Ser odontólogo.	</string>
    <string name="tc_35">Colaborar con el médico en el cuidado de los enfermos.	</string>
    <string name="tc_36">Ser médico.	</string>
    <string name="tc_37">Analizar e investigar la actuación del hombre en su aspecto social y evolutivo a lo largo del tiempo.	</string>
    <string name="tc_38">Ejercer la profesión de historiador.	</string>
    <string name="tc_39">Estudiar la sociedad los grupos humanos y sus realizaciones aplicando estos conocimientos en análisis sociológicos	</string>
    <string name="tc_40">Investigar los fundamentos de la religión católica, analizar textos escritos, restos arqueológicos y tradiciones.	</string>
    <string name="tc_41">Ejercer la profesión del trabajador social.	</string>
    <string name="tc_42">Colaborar con personas o familias para soluciones problemas de tipo social o personal.	</string>
    <string name="tc_43">Ejercer la profesión de filólogo.	</string>
    <string name="tc_44">Interpretar y traducir textos aplicando los conocimientos lingüísticos, teóricos y prácticos.	</string>
    <string name="tc_45">Ser teólogo.	</string>
    <string name="tc_46">Aplicar  los conocimientos sobre las distintas manifestaciones artísticas.	</string>
    <string name="tc_47">Ejercer la profesión de especialista en arte.	</string>
    <string name="tc_48">Ejercer la profesión de sociólogo.	</string>
    <string name="tc_49">Ser criminólogo.	</string>
    <string name="tc_50">Intervenir ante  los tribunales de justicia en nombre de la ley, representando a una persona o al estado.	</string>
    <string name="tc_51">Trabajar como licenciado en ciencias del trabajo.	</string>
    <string name="tc_52">Ser abogado.	</string>
    <string name="tc_53">Ser diplomático (embajador).	</string>
    <string name="tc_54">Representar al propio país en otros países.	</string>
    <string name="tc_55">Hacer averiguaciones e informar a jueces, policías sobre aspectos relacionados con comportamientos delictivos.	</string>
    <string name="tc_56">Representar a empresas o trabajadores ante los tribunales de lo social.	</string>
</resources>