<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.jorda.t_vocacional.test_basico_activity">


        <TextView

            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:fontFamily="@string/Instruccion1"
            android:shadowColor="@color/primaryDarkColor"
            android:text="@string/test_vocacional"
            android:textColor="@color/primaryColor"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="53dp" />

        <CheckBox
            android:id="@+id/R1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="60dp"
            android:padding="4dp"
            android:text="@string/P1" />

        <CheckBox
            android:id="@+id/R2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P2" />

        <CheckBox
            android:id="@+id/R3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P3" />

        <CheckBox
            android:id="@+id/R4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P4" />

        <CheckBox
            android:id="@+id/R5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P5" />

        <CheckBox
            android:id="@+id/R6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P6" />

        <CheckBox
            android:id="@+id/R7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P7" />

        <CheckBox
            android:id="@+id/R8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P8" />

        <CheckBox
            android:id="@+id/R9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P9" />

        <CheckBox
            android:id="@+id/R10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P10" />

        <CheckBox
            android:id="@+id/R11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P11" />

        <CheckBox
            android:id="@+id/R12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P12" />

        <CheckBox
            android:id="@+id/R13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P13" />

        <CheckBox
            android:id="@+id/R14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P14" />

        <CheckBox
            android:id="@+id/R15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P15" />


        <CheckBox
            android:id="@+id/R16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P16" />

        <CheckBox
            android:id="@+id/R17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P17" />

        <CheckBox
            android:id="@+id/R18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P18" />

        <CheckBox
            android:id="@+id/R19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P19" />

        <CheckBox
            android:id="@+id/R20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P20" />

        <CheckBox
            android:id="@+id/R21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P21" />

        <CheckBox
            android:id="@+id/R22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P22" />

        <CheckBox
            android:id="@+id/R23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P23" />

        <CheckBox
            android:id="@+id/R24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P24" />

        <CheckBox
            android:id="@+id/R25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P25" />

        <CheckBox
            android:id="@+id/R26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P26" />

        <CheckBox
            android:id="@+id/R27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P27" />

        <CheckBox
            android:id="@+id/R28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P28" />

        <CheckBox
            android:id="@+id/R29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P29" />

        <CheckBox
            android:id="@+id/R30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P30" />

        <CheckBox
            android:id="@+id/R31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P31" />

        <CheckBox
            android:id="@+id/R32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P32" />


        <CheckBox
            android:id="@+id/R33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P33" />


        <CheckBox
            android:id="@+id/R34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P34" />


        <CheckBox
            android:id="@+id/R35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P35" />

        <CheckBox
            android:id="@+id/R36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P36" />


        <CheckBox
            android:id="@+id/R37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P37" />


        <CheckBox
            android:id="@+id/R38"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P38" />


        <CheckBox
            android:id="@+id/R39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P39" />


        <CheckBox
            android:id="@+id/R40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P40" />


        <CheckBox
            android:id="@+id/R41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P41" />


        <CheckBox
            android:id="@+id/R42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P42" />


        <CheckBox
            android:id="@+id/R43"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P43" />

        <CheckBox
            android:id="@+id/R44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P44" />

        <CheckBox
            android:id="@+id/R45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P45" />

        <CheckBox
            android:id="@+id/R46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P46" />


        <CheckBox
            android:id="@+id/R48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P48" />


        <CheckBox
            android:id="@+id/R49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P49" />

        <CheckBox
            android:id="@+id/R51"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P51" />

        <CheckBox
            android:id="@+id/R52"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/P52" />

        <Button
            android:id="@+id/Enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calificar" />


    </LinearLayout>
</ScrollView>