<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_basico"
            android:icon="@drawable/ic_test"
            android:title="@string/test_basico" />
        <item
            android:id="@+id/nav_completo"
            android:icon="@drawable/ic_test"
            android:title="@string/test_completo" />

        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/configuracion" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/invitar_a_un_amigo" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/help" />
        </menu>
    </item>

</menu>
