<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"
    tools:context=".test_basicoFragment">


    <Button
        android:id="@+id/b_test"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="420dp"
        android:background="@color/primaryLightColor"
        android:text="@string/c_test_basico" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:shadowColor="#97ffcf"
        android:text="@string/f_titulo_basico"
        android:textColor="#ecf0f1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="261dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:text="@string/Instruccion1"
        android:textColor="#ecf0f1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="266dp"
        android:layout_height="41dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="180dp"
        android:text="@string/Instruccion2"
        android:textColor="#ecf0f1" />
</FrameLayout>